# gis

./: CMakeLists.txt  README.md
src/geometry/: area.hpp  distance.hpp  point_position.hpp  position.hpp
src/objects/: line.hpp  point.hpp  polygon.hpp
src/objects/operations/: area.hpp  distance.hpp  dump.hpp  point_position.hpp
src/utils/: dump.hpp
test/: CMakeLists.txt  test_geom_area.cpp  test_geom_distance.cpp  test_geom_position.cpp  test_line.cpp  test_point.cpp  test_polygon.cpp
